Refactor notification handling with a new NotificationService.
Replaced direct dependency on HomeAssistantNotifier with the more generic NotificationService interface.